k8s_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-app
  name: weatherapp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: weather-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weatherapp
        image: evgenyniko/kubernetes_weather_app:1.0.23
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
      restartPolicy: Always
