k8s_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-app
  name: weatherapp-service
spec:
  ports:
    - name: http
      port: 32300
      protocol: TCP
      targetPort: 8000
  selector:
    app: weather-app
  type: ClusterIP
