k8s_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: weather-app
  name: weatherapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: weatherapp.example.com
      http:
        paths:
          - backend:
              service:
                name: weatherapp-service
                port:
                  number: 32300
            path: /
            pathType: Prefix
